# cpp-project-template

./: .clang-format  .clang-tidy  .cmake-format  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/bouncmpe/: jsonmerge.hpp
src/: jsonmerge.cpp
tests/: CMakeLists.txt  jsonmerge.test.cpp
